--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.5.1"
+    "json": "^11.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.4",
+    "mongoose": "^6.5.1",
+    "token": "^0.1.0",
+    "web": "^0.0.2"
   }
 }
